--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "native-base": "^3.2.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-elements": "github:react-native-elements/react-native-elements#dist",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
